# netmnt

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md
crates/netmnt/: Cargo.toml
crates/netmnt-common/: Cargo.toml
crates/netmnt-common/src/: lib.rs  smb.rs
crates/netmnt/src/: creds.rs  main.rs
crates/netmntd/: Cargo.toml
crates/netmntd/src/: exec.rs  main.rs  polkit.rs
data/dbus/: org.netmnt.conf  org.netmnt.service
data/polkit/: org.netmnt.policy
data/servicemenus/: netmnt-unmount.desktop  netmnt.desktop
data/systemd/: netmntd.service
docs/: Architecture.md  Decisions-Techniques.md  Roadmap.md
packaging/aur/: .SRCINFO  README.md
