[workspace]
resolver = "2"
members = [
    "crates/netmnt-common",
    "crates/netmntd",
    "crates/netmnt",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["luust"]
repository = ""

[workspace.dependencies]
netmnt-common = { path = "crates/netmnt-common" }
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "fs"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
rpassword = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
