[workspace]
resolver = "2"
members = [
    "crates/netmnt-common",
    "crates/netmntd",
    "crates/netmnt",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["thongor77"]
repository = "https://github.com/thongor77/netmnt"
homepage = "https://github.com/thongor77/netmnt"

[workspace.dependencies]
netmnt-common = { path = "crates/netmnt-common" }
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "fs"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rpassword = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
